syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "responsestate.proto";
import "endpoint.proto";

option csharp_namespace = "Eth2Signer.v1";
option php_namespace = "Eth2Signer\\v1";
option go_package = "github.com/wealdtech/eth2-signer-api/pb/v1";
option java_package = "com.wealdtech.eth2signerapi.v1";
option java_multiple_files = true;
option java_outer_classname = "AccountManagerProto";

service AccountManager {
  rpc Unlock(UnlockAccountRequest) returns (UnlockAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accountmanager/unlock"
    };
  }

  rpc Lock(LockAccountRequest) returns (LockAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accountmanager/lock"
    };
  }

  rpc Generate(GenerateRequest) returns (GenerateResponse) {
    option (google.api.http) = {
      post: "/v1/accountmanager/generate"
    };
  }
}

message UnlockAccountRequest {
  string account = 1;
  bytes passphrase = 2;
}

message LockAccountRequest {
  string account = 1;
}

message UnlockAccountResponse {
  ResponseState state = 1;
}

message LockAccountResponse {
  ResponseState state = 1;
}

message GenerateRequest {
  string account = 1;
  bytes passphrase = 2;
  uint32 participants = 3;
  uint32 signing_threshold = 4;
}

message GenerateResponse {
  ResponseState state = 1;
  string message = 2;
  bytes public_key = 3;
  repeated Endpoint participants = 4;
}
